creo elemento in HTML

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     
+    <h1>FRIZZBUZZ</h1>
 
-
-
+    <div id="table"></div>
 
 
     <script src="./myscript.js"></script> 
+
 </body>
 </html>
