--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <!-- link CSS -->
-    <title>FRIZZBUZZt</title>
+    <title>FIZZBUZZ</title>
 </head>
 <body>
     
-    <h1>FRIZZBUZZ</h1>
+    <h1>FizzBuzzDOM</h1>
 
     <div id="table"></div>
 
